2005-09-01 Benoit Grégoire  <bock@step.polymtl.ca>
	WARNING:  DO NOT use the CVS auth server in production until further notice.  
	Massive internal changes are underway.  
	Use the release tagged 1.0m1 in production.
	* Network abstraction mostly complete, including UI.  
	All that is missing is new network creation, network stakeholder UI and testing.  
	* Cleanup the config file of all the now unneeded constants. 
	 Note that the install script is currently broken.  
	There can now be multiple networks on the server.  
	The install script will have to make sure that there is at least one, with one super-admin

2005-08-31 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug where node ID containing periods, whitespaces or underscores would confuse PHP
	* MD5 hash is used to make sur the http vars are unique
	* This is only valid for Node administration

NOTE:  the 1.0m1 release was tagged here
		
2005-08-31 Benoit Grégoire  <bock@step.polymtl.ca>
	* Node.php:  Fix node creation
	
2005-08-31 Francois Proulx <francois.proulx@gmail.com>
	* Fixed new node creation bug

2005-08-29 Philippe April <philippe@ilesansfil.org>
	* js/gmaps_hotspots_status_map.js: Fixed small bug in that makes prevents
	IE to see the map properly.

2005-08-22 Pascal Leclerc  <pascal@plec.ca>
	* install.php, Change javascript to OnClick + dependencie note
	* schema_validate.php, Fix broken DB update for install.php
	* SmartyWifidog.php, Add automatic redirect to install.php if Smarty not installed

2005-08-22 Francois Proulx <francois.proulx@gmail.com>
	* Added edit button for quickly accessing Content editing mode
	* Changed the layout so the admin ui fits in a tighter space
	
2005-08-21 Francois Proulx <francois.proulx@gmail.com>
	* Added reference to new street address fields in mapping page and on status template
	* Fix bug on line 756 of RssPressReview , added check for empty var.
	* Flickr support is broken, added  bug to sf.net tracker
	