@@ -1,3 +1,6 @@
+2005-09-03 Philippe April  <philippe@ilesansfil.org>
+	* Schema change: Added last_paged column to nodes table
+
 2005-09-01 Benoit Grégoire  <bock@step.polymtl.ca>
 	WARNING:  DO NOT use the CVS auth server in production until further notice.  
 	Massive internal changes are underway.  
